first page done

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,14 @@
-h1 {
-    color: blue
+@import 'base/variables';
+
+* {
+    font-family: 'Museo Sans Cyrl 500', sans-serif;
 }
+
+.container {
+    width: 950px;
+    margin: 0 auto;
+}
+
+@import 'blocks/promo';
+@import 'blocks/header';
+@import 'blocks/buttons';
