--- a/sass/blocks/_buttons.scss
+++ b/sass/blocks/_buttons.scss
@@ -1,7 +1,7 @@
 .button {
     width: 153px;
     height: 32px;
-    background: #C70101;
+    background: $main_color;
     border-radius: 5px;
     border: none;
     font-style: normal;
@@ -18,5 +18,16 @@
         width: 300px;
         height: 50px;
         font-size: 16px;
+    }
+    &_submit {
+        width: 100%;
+        height: 58px;
+        font-weight: 500;
+        font-size: 16px;
+        border-radius: 7px;
+    }
+    &_mini {
+        width: 135px;
+        height: 44px;
     }
 }
