--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,4 +13,8 @@
 @import 'blocks/header';
 @import 'blocks/buttons';
 @import 'blocks/advantages';
+@import 'blocks/consultation';
+@import 'blocks/forms';
+@import 'blocks/carousel';
+@import 'blocks/catalog';
 @import 'base/media';
