--- a/sass/blocks/_promo.scss
+++ b/sass/blocks/_promo.scss
@@ -51,8 +51,11 @@
         color: #FFFFFF;
         a {
             color: #FFFFFF;
-            text-decoration: underline;
+            text-decoration: none;
             text-transform: uppercase;
+            &:hover {
+                text-decoration: underline;
+            }
         }
     }
 }
