--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,5 +17,6 @@
 @import 'blocks/forms';
 @import 'blocks/carousel';
 @import 'blocks/catalog';
+@import 'blocks/feed';
+@import 'blocks/footer';
 @import 'base/media';
-//какая то хуета
