form validation done

--- a/sass/blocks/_forms.scss
+++ b/sass/blocks/_forms.scss
@@ -1,6 +1,6 @@
 .feed-form {
     width: 303px;
-    height: 258px;
+    min-height: 258px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
