--- a/sass/blocks/_consultation.scss
+++ b/sass/blocks/_consultation.scss
@@ -20,4 +20,13 @@
     &__feed-form {
         margin-top: 35px;
     }
+    .error {
+        border: 1px solid red;;
+    }
+    label.error {
+        border: none;
+        text-align: center;
+        margin-bottom: 15px;
+        color: #FFFFFF;
+    }
 }
