scroll and button to top added

--- a/sass/base/_media.scss
+++ b/sass/base/_media.scss
@@ -340,6 +340,11 @@
     .modal#order {
         min-height: 380px;
     }
+    .up {
+        bottom: 30px;
+        right: 30px;
+
+    }
 }
 @media (min-width:320px) and (max-width:400px) {
     .carousel {
