--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,6 +4,11 @@
     font-family: 'Museo Sans Cyrl 500', sans-serif;
 }
 
+.ul_reboot {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
 .container {
     width: 950px;
     margin: 0 auto;
